# madl-dvt

./: LICENSE  README.md  madl.cabal  stack.yaml
docs/: index.md
examples/: Examples.hs  dac_experiments.py  fmcad_experiments.py
examples/Examples/: AllPrimitives.hs  EightRouterModel  EightRouterModel.hs  InvariantTestNetwork.hs  Macros.hs  MergeBlock.hs  MergeSwitchNetwork.hs  RedBlue.hs  ReorderTestNetwork.hs  ReorderTestNetwork2.hs  SmallAutomatonNetwork.hs  SmallFunctionNetwork.hs  SmallMacroTest.hs  SmallMatchNetwork.hs  SmallSwitchNetwork.hs  SmallTestNetwork.hs  TwoAgents.hs  TypesAndFunctions.hs
examples/MaDL/: cycle_test.madl  fig15.madl  lb.madl  macro_readOnlyVar.madl  macroparam.madl  main.madl  matchProcess.madl  mtn03.madl  prodcon_v00.madl  prodcon_v01.madl  prodcon_v02.madl  review_tcad_gals  switch_otherwise_in_comp.madl  tn_empty_queue_guard.madl  twoagents2_2.madl  vcwbn.madl
examples/MaDL/LIGERO-Perry/: 16Routers.madl  2Routers.madl  4Routers.madl  9Routers.madl  CCWRouter.madl  CWRouter.madl  FilteredSource.madl  InSwitch.madl  RingStop-old.madl  RingStop.madl
examples/MaDL/SDNoC/: 16routers.madl  GridRouter.madl  RingStation.madl  XYSwitch.madl  gengrid16.py  gengrid4.py
examples/MaDL/automataTests/: allprim.aut  allprim.mcf  allprim.mcrl2  allprim.pbes  allprim_min.aut  channelGuard.madl  combinatorial_queues.madl  ind_queue_sequences.madl  merge_to_queue.madl  merge_two_colours.madl  simple_deadlock.madl  simple_fork_join.madl  simple_function.madl  simple_merge.madl  simple_queue.dot  simple_queue.madl  simple_switch.madl  simple_switch_expected.aut  test_conf.txt  two_sources_merge.madl
examples/MaDL/bugs/: README  issue205.madl  issue304.madl  issue304.mwb  issue368.madl  issue68.madl  process_bug_issue_385.madl  process_bug_issue_48.madl  soundess_bug_issue48.madl  soundness_bug_issue_375.madl
examples/MaDL/complex_systems_examples/: boundedSource.madl  boundedSource.mwb  limitedSource.madl  limitedSource.mwb  network_1_router_4_terminal_devices.madl  network_2_nodes_with_constraints.madl  network_2_nodes_with_constraints.mwb  network_2x2.madl  network_2x2.mwb  network_2x2_closed.madl  network_2x2_closed.mwb  network_3x3.madl  network_3x3.mwb  network_4_routers_and_8_terminal_devices.madl  network_xy.madl  non_deterministic_router.madl  non_deterministic_router.mwb  non_deterministic_router_closed.madl  non_deterministic_router_closed.mwb  non_deterministic_router_closed_with_constraint.madl  non_deterministic_router_closed_with_constraint.mwb  router_closed_with_constraints.madl  terminal_device.madl
examples/MaDL/converter/: simple_queue.mcrl2  simple_queue_colors.mcrl2  simple_queue_data.mcrl2  simple_queue_mult.mcrl2
examples/MaDL/deterministicBubble/: deterministicBubble_v00.madl
examples/MaDL/freek_example_decoupling/: mi_simple.madl
examples/MaDL/generatedExamples/: allprim.madl  allprimDL.madl  itn.madl  itn2.madl  mergeblock.madl  msn.madl  redblue.madl  redblueDL.madl  rtn-22F.madl  rtn-22T.madl  rtn-23F.madl  rtn-23T.madl  rtn-32F.madl  rtn-32T.madl  rtn-34F.madl  rtn-34T.madl  rtn-45F.madl  rtn-45T.madl  rtn2-2F.madl  rtn2-2T.madl  rtn2-3F.madl  rtn2-3T.madl  rtn3-22F.madl  rtn3-22T.madl  rtn3-23F.madl  rtn3-23T.madl  rtn3-32F.madl  rtn3-32T.madl  sfn.madl  smn.madl  smt.madl  smt2.madl  smt3.madl  ssn.madl  stn.madl  twoagents10.madl  twoagents8.madl  twoagents9.madl
examples/MaDL/guardqueue/: guardQueue1.madl  guardQueue2.madl  guardQueue3.madl  guardQueue4.madl  guardQueue5.madl  guardQueue6.madl  guardQueue7.madl  guardQueue8.madl
examples/MaDL/ligero/: deadlock_Source4.smt2  deadlock_test.smt2  invs_extra.txt  ligero.sv  ligero_visu.sv  model.smt  model00.madl  types.txt
examples/MaDL/mesh_cache_coherent/: mesh_MI.madl
examples/MaDL/mesh_xy/: issueXXX.madl  mesh_xy.madl  mesh_xy_22.madl  mesh_xy_22_ms.madl  mesh_xy_mi_freek_version.madl  mesh_xy_ms.madl  mesh_xy_simple_mi.madl  mesh_xy_simple_mi_DLF.madl  mesh_xy_simple_mi_DLF_tmp.madl  mesh_xy_wc.madl  mesh_xy_wc_ms.madl  model.nuxmv  router_55.madl
examples/MaDL/peh_dally_2001/: peh_dally_2001_v00.madl
examples/MaDL/producer_consumer/: dmac_periph_bus_v00.madl
examples/MaDL/reorder_buffer/: foo.madl  gen0_no_reorder.madl  gen0_reorder.madl  (+3 more)
examples/Verilog/: assertionsWithoutRegisters.v  assertionsWithoutRegistersNoInterface.v
examples/go_no_go/: gng11.madl  gng11_dl.madl  gng15_dl.madl  gng3.madl  gng31.madl  gng31_dl.madl  gng63.madl  gng63_dl.madl  gng7.madl  gng7_dl.madl  go_no_go_component.madl  go_no_go_component_dl.madl  go_no_go_ctrl.madl  go_no_go_macro.madl  go_no_go_macro_dl.madl  go_no_go_top_1.madl  go_no_go_top_11.madl  go_no_go_top_11_dl.madl  go_no_go_top_127_dl.madl  go_no_go_top_15.madl  go_no_go_top_15_dl.madl  go_no_go_top_1_dl.madl  go_no_go_top_2.madl  go_no_go_top_23_dl.madl  go_no_go_top_2_dl.madl  go_no_go_top_31_dl.madl  go_no_go_top_4_dl.madl  go_no_go_top_5.madl  go_no_go_top_63.madl  go_no_go_top_63_dl.madl  go_no_go_top_6_dl.madl  go_no_go_top_7.madl
examples/power_clock/: act_combo.madl  act_gen.madl  controller.madl  controller_dl.madl  controller_no_self_loops.madl  dev_con.madl  dev_con1.madl  dev_con1_dl.madl  dev_con3.madl  dev_con3_dl.madl  dev_con4.madl  dev_con_dl.madl  device.madl  domain.madl  domain2.madl  domain2_dl.madl  domain3_dl.madl  domain4.madl  domain4_dl.madl  domain5.madl  domain5_dl.madl  domain6.madl  domain6_dl.madl  domain7.madl  domain7_dl.madl  pc_top_10_5.madl  pc_top_10_5_dl.madl  pc_top_1_2.madl  pc_top_1_2_dl.madl  pc_top_1_3.madl  pc_top_1_3_dl.madl  pc_top_1_5.madl  pc_top_1_5_dl.madl  pc_top_20_5.madl  pc_top_20_5_dl.madl  pc_top_2_2.madl  pc_top_2_2_dl.madl  pc_top_2_5.madl  pc_top_2_5_dl.madl  pc_top_30_5.madl  (+29 more)
src/dlockdetect/: main.hs
src/m2madl/: Main.hs
src/m2verilog/: Main.hs
src/madl2fsm/: Main.hs  Main.hs~
src/madl2mcrl2/: Main.hs
src/madl2smv/: Main.hs
src/madlToolBox/: computeColours.hs  computeProcessStateMaps.hs  main.hs
src/server/: main.hs
src/utilities/: invariants-main.hs  parser-main.hs
src/v2m/: Main.hs  Verilog2MaDL.hs
src/voi/: Main.hs
(+259 files in other folders)
