name:                madl
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/madl#readme
license:             MIT
license-file:        LICENSE
author:              T. Belder, A. Fedotov, S. Joosten, F. Verbeek, H. de Vloed, W. Wesselink, S. Wouda
maintainer:          afedotov@tue.nl
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/madl#readme>

library
  hs-source-dirs:      src/lib, examples
  exposed-modules:
                  Madl.Base.Identifiers,
                  Madl.Base,
                  Madl.Cycles,
                  Madl.Deadlock.Runner,
                  Madl.Deadlock.Formulas,
                  Madl.Deadlock.SMTSolvers,
                  Madl.Deadlock.DeadlockDetection,
                  Madl.Livelock,
                  Madl.Network,
                  Madl.MsgTypes,
                  Madl.Islands,
                  Madl.MetaIslands,
                  Madl.Rings,
                  Madl.SourceInformation,
                  Madl.Invariants,
                  Echelon.Echelon,
                  Madl.Deadlock.SMT,
                  Madl.Deadlock.Nuxmv,
                  Madl2Verilog.Assertions,
                  Madl2Verilog.Automaton,
                  Madl2Verilog.Channel,
                  Madl2Verilog.Component,
                  Madl2Verilog.Functions,
                  Madl2Verilog.Library,
                  Madl2Verilog.Macro,
                  Madl2Verilog.Madl,
                  Madl2Verilog.VerilogConstants,
                  Madl2Verilog.VerilogGen,
                  Utils.Concatable,
                  Utils.Either,
                  Utils.Executable,
                  Utils.File,
                  Utils.Map,
                  Utils.NuxmvCode,
                  Utils.SMTCode,
                  Utils.Text,
                  Utils.Tuple,
                  BaseLike.CustomPrelude,
                  Verilog.PortsAndBlackBoxes,
                  Verilog.ModuleAnalysis,
                  Verilog.Processor,
                  Verilog.Parser,
                  BooleanSymbolic.Class,
                  BooleanSymbolic.CalcX,
                  BooleanSymbolic.NetStructure,
                  BooleanSymbolic.UseMiniSat,
                  CommonDataTypes.TraverseProps,
                  CommonDataTypes.Syntax,
                  Examples,
                  Examples.InvariantTestNetwork,
                  Examples.Macros,
                  Examples.AllPrimitives,
                  Examples.MergeSwitchNetwork,
                  Examples.MergeBlock,
                  Examples.ReorderTestNetwork,
                  Examples.SmallAutomatonNetwork,
                  Examples.SmallFunctionNetwork,
                  Examples.SmallMacroTest,
                  Examples.SmallMatchNetwork,
                  Examples.SmallSwitchNetwork,
                  Examples.SmallTestNetwork,
                  Examples.TwoAgents,
                  Examples.RedBlue,
                  Examples.TypesAndFunctions,
                  Parser.IncludeStatement,
                  Parser.MadlAST,
                  Parser.MadlLexer,
                  Parser.MadlParser,
                  Parser.ASTTranslator,
                  Parser.MadlTypeChecker,
                  Madl2mCRL2.Converter,
                  Madl2fsm.Madl2fsm  
  build-depends:       base >= 4.7 && < 5,
                       fgl >= 5.5.2,
                       text >= 1.2.1,
                       containers >= 0.5.7.1,
                       hashable >=1.2,
                       hashmap >= 1.3.0,
                       either-unwrap >= 1.1,
                       parsec >= 3.1.9,
                       filepath,
                       fgl-visualize -any,
                       bimap,
                       integer-logarithms,
                       bytestring,
                       regex-posix >= 0.95.2,
                       mtl,
                       zenc >= 0.1.1,
                       vector >= 0.12.0.1,
                       minisat >= 0.1.2,
                       random >= 1.1,
                       data-partition >= 0.3.0.0,
                       regex-tdfa >= 1.2.2,
                       temporary >= 1.2.1.1,
                       process >= 1.4.3.0,
                       directory >= 1.3.0.0,
                       monad-parallel >= 0.7.2.2,
                       split >= 0.2.3.2,
                       attoparsec >= 0.13.1.0
  default-language:    Haskell2010

executable madl2fsm
           hs-source-dirs: src/madl2fsm
           main-is: Main.hs
           build-depends:
                         madl,
                         text,
                         base,
                         bytestring
           ghc-options: -Wall -Werror
           default-language: Haskell2010
  
--executable madl-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , madl
--  default-language:    Haskell2010

--test-suite madl-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , madl
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/madl
