name:                madl
version:             0.1.3.4
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/madl#readme
license:             MIT
license-file:        LICENSE
author:              T. Belder, A. Fedotov, S. Joosten, F. Verbeek, H. de Vloed, W. Wesselink, P. van Wesel,S. Wouda
maintainer:          afedotov@tue.nl
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/madl#readme>

library
  hs-source-dirs:      src/lib, examples
  exposed-modules:
                  Madl.Base.Identifiers,
                  Madl.Base,
                  Madl.Cycles,
                  Madl.Deadlock.Runner,
                  Madl.Deadlock.Formulas,
                  Madl.Deadlock.SMTSolvers,
                  Madl.Deadlock.DeadlockDetection,
                  Madl.Livelock,
                  Madl.Network,
                  Madl.MsgTypes,
                  Madl.Islands,
                  Madl.MetaIslands,
                  Madl.Rings,
                  Madl.SimplifyFSM,
                  Madl.SourceInformation,
                  Madl.Invariants,
                  Echelon.Echelon,
                  Madl.Deadlock.SMT,
                  Madl.Deadlock.Nuxmv,
                  Madl2Verilog.Assertions,
                  Madl2Verilog.Automaton,
                  Madl2Verilog.Channel,
                  Madl2Verilog.Component,
                  Madl2Verilog.Functions,
                  Madl2Verilog.Library,
                  Madl2Verilog.Macro,
                  Madl2Verilog.Madl,
                  Madl2Verilog.VerilogConstants,
                  Madl2Verilog.VerilogGen,
                  Utils.Concatable,
                  Utils.Either,
                  Utils.Executable,
                  Utils.File,
                  Utils.Map,
                  Utils.NuxmvCode,
                  Utils.SMTCode,
                  Utils.Text,
                  Utils.Tuple,
                  BaseLike.CustomPrelude,
                  Verilog.PortsAndBlackBoxes,
                  Verilog.ModuleAnalysis,
                  Verilog.Processor,
                  Verilog.Parser,
                  BooleanSymbolic.Class,
                  BooleanSymbolic.CalcX,
                  BooleanSymbolic.NetStructure,
                  BooleanSymbolic.UseMiniSat,
                  CommonDataTypes.TraverseProps,
                  CommonDataTypes.Syntax,
                  Examples,
                  Examples.InvariantTestNetwork,
                  Examples.Macros,
                  Examples.AllPrimitives,
                  Examples.MergeSwitchNetwork,
                  Examples.MergeBlock,
                  Examples.ReorderTestNetwork,
                  Examples.SmallAutomatonNetwork,
                  Examples.SmallFunctionNetwork,
                  Examples.SmallMacroTest,
                  Examples.SmallMatchNetwork,
                  Examples.SmallSwitchNetwork,
                  Examples.SmallTestNetwork,
                  Examples.TwoAgents,
                  Examples.RedBlue,
                  Examples.TypesAndFunctions,
                  Parser.IncludeStatement,
                  Parser.MadlAST,
                  Parser.MadlLexer,
                  Parser.MadlParser,
                  Parser.ASTTranslator,
                  Parser.MadlTypeChecker,
                  Madl2mCRL2.Converter,
                  Madl2fsm.Madl2fsm,
                  Madl2smv.Converter
  build-depends:       base >= 4.7 && < 5,
                       fgl >= 5.5.2,
                       text >= 1.2.1,
                       containers >= 0.5.7.1,
                       hashable >=1.2,
                       hashmap >= 1.3.0,
                       either-unwrap >= 1.1,
                       parsec >= 3.1.9,
                       filepath,
                       fgl-visualize -any,
                       bimap,
                       integer-logarithms,
                       bytestring,
                       regex-posix >= 0.95.2,
                       mtl,
                       zenc >= 0.1.1,
                       vector -any,
                       minisat >= 0.1.2,
                       random >= 1.1,
                       data-partition >= 0.3.0.0,
                       regex-tdfa >= 1.2.2,
                       temporary -any,
                       process -any,
                       directory -any,
                       monad-parallel >= 0.7.2.2,
                       split -any,
                       attoparsec >= 0.13.1.0,
                       array -any
  default-language:    Haskell2010

executable dlockdetect
    build-depends:
        base>=4.8.1.0,
        containers>=0.5.6.2,
        text>=1.2.1.3,
        random>=1.1,
        hashmap >= 1.3.0,
        Cabal >= 1.22.4,
        either-unwrap >= 1.1,
        directory >= 1.2.2,
        madl
    hs-source-dirs:      src/dlockdetect
    main-is:             main.hs
    ghc-options:         -Wall -threaded -Werror
    default-language:    Haskell2010

executable madl2fsm
           hs-source-dirs: src/madl2fsm
           main-is: Main.hs
           build-depends:
                         madl,
                         text,
                         base,
                         bytestring
           ghc-options: -Wall -Werror
           default-language: Haskell2010


executable m2v
    build-depends:
        base >= 4.7,
        containers >=0.5.0.0,
        either-unwrap >= 1.1,
        hashmap -any,
        text -any,
        fgl -any,
        integer-logarithms -any,
        madl
    ghc-options: -Wall -Werror
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src/m2verilog
    default-language: Haskell2010

executable voi
    hs-source-dirs:      src/voi
    main-is:             Main.hs
    other-extensions:
                     OverloadedStrings
                     MultiParamTypeClasses
                     FlexibleInstances
                     CPP
                     MagicHash
                     Trustworthy
                     BangPatterns
                     DeriveDataTypeable
                     StandaloneDeriving
                     DeriveTraversable
                     DeriveFoldable
                     DeriveFunctor
                     FlexibleContexts
                     ScopedTypeVariables
    build-depends:
                  sbv>=0.5,
                  zenc>=0.1 ,
                  random == 1.1,
                  base >=4.7,
                  containers >=0.5,
                  bytestring >=0.10,
                  TypeCompose >=0.9,
                  ghc-prim >=0.3,
                  deepseq >=1.3,
                  hashable >=1.2,
                  mtl >=2.2,
                  madl
    other-modules:
                  BooleanSymbolic.SMT
                  EchelonForms.RingLogic
                  EchelonForms.SumOfProductForEchelon
    default-language:    Haskell2010

executable invs
    hs-source-dirs:     src/utilities
    main-is:            invariants-main.hs
    build-depends:
                  madl,
                  hashmap >= 1.3.0,
                  text >= 1.2.1,
                  base >= 4.7
    ghc-options:        -Wall -Werror
    default-language:   Haskell2010

executable parse
    hs-source-dirs: src/utilities
    main-is: parser-main.hs
    build-depends:
                  madl,
                  text >= 1.2.1,
                  base >= 4.7
   ghc-options: -Wall -Werror
   default-language: Haskell2010

executable madl2mcrl2
           hs-source-dirs: src/madl2mcrl2
           main-is: Main.hs
           build-depends:
                         madl,
                         text,
                         base
           ghc-options: -Wall -Werror
           default-language: Haskell2010

executable madl2smv
    hs-source-dirs: src/madl2smv
    main-is: Main.hs
    build-depends:
                  madl,
                  text,
                  base
    ghc-options: -Wall -Werror
    default-language: Haskell2010

executable madltoolbox
    hs-source-dirs: src/madlToolBox
    main-is: main.hs
    build-depends:
                  madl,
                  text >= 1.2.1,
                  base >= 4.7,
                  containers >= 0.5,
                  aeson
                  --resourcet >= 1.1,
                  --http-types,
                  --wai,
                  --warp,
                  --either >= 4.4,
                  --transformers >= 0.4,
                  --bytestring >= 0.10,
                  --parsec>=3.1.9
                  --temporary,
                  --filepath
    ghc-options: -Wall -Werror
    default-language: Haskell2010

executable computeColours
    hs-source-dirs: src/madlToolBox
    main-is: computeColours.hs
    build-depends:
        madl,
        text >= 1.2.1,
        base >= 4.7,
        containers >= 0.5,
        aeson,
        resourcet >= 1.1,
        http-types,
        wai,
        warp,
        either >= 4.4,
        transformers >= 0.4,
        bytestring >= 0.10,
        parsec>=3.1.9,
        temporary,
        filepath
    ghc-options: -Wall -Werror
    default-language: Haskell2010

executable computeProcessStateMaps
    hs-source-dirs: src/madlToolBox
    main-is: computeProcessStateMaps.hs
    build-depends:
        madl,
        text >= 1.2.1,
        base >= 4.7,
        containers >= 0.5,
        aeson,
        resourcet >= 1.1,
        http-types,
        wai,
        warp,
        either >= 4.4,
        transformers >= 0.4,
        bytestring >= 0.10,
        parsec>=3.1.9,
        temporary,
        filepath
    ghc-options: -Wall -Werror
    default-language: Haskell2010

executable madlserver
    hs-source-dirs: src/server
    main-is: main.hs
    build-depends:
        madl,
        text >= 1.2.1,
        base >= 4.7,
        containers >= 0.5,
        aeson,
        resourcet >= 1.1,
        http-types,
        wai,
        warp,
        either >= 4.4,
        transformers >= 0.4,
        bytestring >= 0.10,
        parsec>=3.1.9,
        temporary,
        filepath
    ghc-options: -Wall -Werror
    default-language: Haskell2010



--executable madl-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , madl
--  default-language:    Haskell2010

--test-suite madl-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , madl
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/madl
